force-app/main/default/objects/SPEN_Sms__c/SPEN_Sms__c.object-meta.xml
<CustomObject>
    <description>Represents a single SMS message.</description>
    <label>SMS</label>
    <nameField>
        <displayFormat>SMS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMSes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>