force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_CaseId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case record that generated the SMS.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>