force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_CommunicationSchedulerId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommunicationSchedulerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The communication scheduler record that generated the SMS record.</description>
    <label>Communication Scheduler</label>
    <referenceTo>SPEN_CommunicationScheduler__c</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>