force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_ContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recipient of the SMS message.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>