force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliveryTime__c</fullName>
    <label>Sent Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>