force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_DeliveryTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliveryTimeFormula__c</fullName>
    <formula>DATETIMEVALUE( SUBSTITUTE(SPEN_DeliveryTime__c,&apos;T&apos;,&apos; &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Time</label>
    <type>DateTime</type>
</CustomField>