force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Send Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>