force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Event__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Event__c</fullName>
    <description>Indicates the event that triggered the SMS record to be created. In IVR scenarios, this is used to look up the message template.</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPAS Inquiry</fullName>
            </value>
            <value>
                <fullName>Supplier Inquiry</fullName>
            </value>
            <value>
                <fullName>Case Creation</fullName>
            </value>
            <value>
                <fullName>Merged from SP to Network</fullName>
            </value>
            <value>
                <fullName>3-Hour Comfort Call</fullName>
            </value>
            <value>
                <fullName>3rd Call Received</fullName>
            </value>
            <value>
                <fullName>Dropped Supply with Notice</fullName>
            </value>
            <value>
                <fullName>Dropped Supply without Notice</fullName>
            </value>
            <value>
                <fullName>Estimated Restoration Time Extended</fullName>
            </value>
            <value>
                <fullName>Incident Created</fullName>
            </value>
            <value>
                <fullName>Incident Restored</fullName>
            </value>
            <value>
                <fullName>Resource Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Resource Dispatched</fullName>
            </value>
            <value>
                <fullName>MPAS Out-Of-Area Inquiry</fullName>
            </value>
            <value>
                <fullName>Resource ETA Change</fullName>
            </value>
            <value>
                <fullName>Medically Dependent by District</fullName>
            </value>
            <value>
                <fullName>Planned Outage Communication</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>HV proactive contact</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Complaint Case Creation</fullName>
            </value>
            <value>
                <fullName>GE Closure Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>