force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_FromName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FromName__c</fullName>
    <label>From Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>