force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>