force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_IsProactive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsProactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the customer was proactively contacted before incident restoration</description>
    <label>Is Proactive</label>
    <type>Checkbox</type>
</CustomField>