force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_IvrMessageId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IvrMessageId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the SMS message template to be used.</description>
    <label>Message Template</label>
    <referenceTo>SPEN_IVRMessage__c</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>