force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Message__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Message__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Actual message sent to the customer.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>