force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_MessageContent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessageContent__c</fullName>
    <description>To be saved with Message content</description>
    <label>Message Content</label>
    <type>TextArea</type>
</CustomField>