force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_MessageType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessageType__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>