force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Mobile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Mobile__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>The recipient&apos;s mobile number.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>