force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_MpanName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MpanName__c</fullName>
    <description>IVR Only. Sets the MPAN name.</description>
    <label>MPAN Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>