force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_PremiseId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The premise impacted by the message.</description>
    <label>Premise</label>
    <referenceTo>SPEN_Premise__c</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>