force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_RestoredConfirmation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RestoredConfirmation__c</fullName>
    <label>Restored Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>