force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_ShortCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ShortCode__c</fullName>
    <label>Short Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>