force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <description>Represents the status of message deliverability.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
            </value>
            <value>
                <fullName>Potentially Duplicate</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>