force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplierName__c</fullName>
    <description>IVR Only. Sets the supplier name.</description>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>