force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_SupplierNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplierNumber__c</fullName>
    <description>IVR Only. Sets the Supplier Number.</description>
    <label>Supplier Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>