force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_SyncToMarketingCloudFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SyncToMarketingCloudFormula__c</fullName>
    <description>Informs Marketing Cloud to sync the record.</description>
    <formula>IF(ISPICKVAL(SPEN_Status__c, &quot;Ready&quot;), TRUE, FALSE)</formula>
    <label>Sync to Marketing Cloud?</label>
    <type>Checkbox</type>
</CustomField>