force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_TimelineDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TimelineDeliveryTime__c</fullName>
    <description>Conditional formula field to populate either createddate or delivery time</description>
    <formula>IF(AND(ISBLANK(SPEN_DeliveryTimeFormula__c), ISPICKVAL(SPEN_Status__c, &apos;Sent&apos;)),  CreatedDate , SPEN_DeliveryTimeFormula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline Delivery Time</label>
    <type>DateTime</type>
</CustomField>