force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <description>Used in IVR scenarios to inform the message template.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPAN Inquiry</fullName>
            </value>
            <value>
                <fullName>Supplier Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>