force-app/main/default/objects/SPEN_Sms__c/fields/SPEN_VoiceCallId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VoiceCallId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Voice Call record where this SMS was generated from.</description>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>SMSes</relationshipLabel>
    <relationshipName>SPEN_SMSes</relationshipName>
    <type>Lookup</type>
</CustomField>