force-app/main/default/objects/SPEN_Sms__c/fields/Survey_Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_Link__c</fullName>
    <label>Survey Invitation Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>