force-app/main/default/objects/SPEN_Sms__c/recordTypes/Broadcast.recordType-meta.xml
<RecordType>
    <fullName>Broadcast</fullName>
    <active>true</active>
    <label>Broadcast</label>
</RecordType>