force-app/main/default/objects/SPEN_Sms__c/recordTypes/IVR.recordType-meta.xml
<RecordType>
    <fullName>IVR</fullName>
    <active>true</active>
    <label>IVR</label>
</RecordType>