force-app/main/default/objects/SPEN_Sms__c/validationRules/BroadcastRequiredFieldCommsScheduler.validationRule-meta.xml
<ValidationRule>
    <fullName>BroadcastRequiredFieldCommsScheduler</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Broadcast&quot; &amp;&amp;
ISBLANK(SPEN_CommunicationSchedulerId__c)</errorConditionFormula>
    <errorMessage>The Communication Scheduler field is required.</errorMessage>
</ValidationRule>