force-app/main/default/objects/SPEN_Sms__c/validationRules/BroadcastRequiredFieldContact.validationRule-meta.xml
<ValidationRule>
    <fullName>BroadcastRequiredFieldContact</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Broadcast&quot; &amp;&amp;
ISBLANK(SPEN_ContactId__c) &amp;&amp;  SPEN_CaseId__r.RecordType.DeveloperName != &quot;SPEN_UnplannedBypass&quot;</errorConditionFormula>
    <errorMessage>The Contact field is required.</errorMessage>
</ValidationRule>