force-app/main/default/objects/SPEN_Sms__c/validationRules/BroadcastRequiredFieldIncident.validationRule-meta.xml
<ValidationRule>
    <fullName>BroadcastRequiredFieldIncident</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Broadcast&quot; &amp;&amp;
ISBLANK(SPEN_IncidentId__c) &amp;&amp; TEXT(SPEN_Event__c) != &apos;Medically Dependent by District&apos; &amp;&amp; TEXT(SPEN_Event__c) != &apos;Planned Outage Communication&apos; &amp;&amp; TEXT(SPEN_Event__c) != &apos;On Demand&apos;</errorConditionFormula>
    <errorMessage>The Incident field is required.</errorMessage>
</ValidationRule>