force-app/main/default/objects/SPEN_Sms__c/validationRules/BroadcastRequiredFieldMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>BroadcastRequiredFieldMobile</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Broadcast&quot; &amp;&amp;
ISBLANK(SPEN_Mobile__c)</errorConditionFormula>
    <errorMessage>The Mobile field is required.</errorMessage>
</ValidationRule>