force-app/main/default/objects/SPEN_Sms__c/validationRules/BroadcastRequiredFieldPremise.validationRule-meta.xml
<ValidationRule>
    <fullName>BroadcastRequiredFieldPremise</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Broadcast&quot; &amp;&amp;
ISBLANK(SPEN_PremiseId__c) &amp;&amp; SPEN_CaseId__r.RecordType.DeveloperName != &quot;SPEN_UnplannedBypass&quot;</errorConditionFormula>
    <errorMessage>The Premise field is required.</errorMessage>
</ValidationRule>