force-app/main/default/objects/SPEN_Sms__c/validationRules/CaseRequiredFieldCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseRequiredFieldCase</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Case&quot; &amp;&amp;
ISBLANK(SPEN_CaseId__c)</errorConditionFormula>
    <errorMessage>The Case field is required.</errorMessage>
</ValidationRule>