force-app/main/default/objects/SPEN_Sms__c/validationRules/CaseRequiredFieldMessageTemplate.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseRequiredFieldMessageTemplate</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Case&quot; &amp;&amp;
ISBLANK(SPEN_IvrMessageId__c)</errorConditionFormula>
    <errorMessage>The Message Template field is required.</errorMessage>
</ValidationRule>