force-app/main/default/objects/SPEN_Sms__c/validationRules/CaseRequiredFieldMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseRequiredFieldMobile</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Case&quot; &amp;&amp;
ISBLANK(SPEN_Mobile__c)</errorConditionFormula>
    <errorMessage>The Mobile field is required.</errorMessage>
</ValidationRule>