force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldEvent</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISPICKVAL(SPEN_Event__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>The Event field is required.</errorMessage>
</ValidationRule>