force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldEventMpasInquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldEventMpasInquiry</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISPICKVAL(SPEN_Event__c, &quot;MPAS Inquiry&quot;) &amp;&amp;
ISBLANK(SPEN_SupplierName__c) &amp;&amp; 
ISBLANK(SPEN_SupplierNumber__c) &amp;&amp; 
ISBLANK(SPEN_MpanName__c)</errorConditionFormula>
    <errorMessage>The Supplier Name, Supplier Number and MPAN Name fields are required if the Event field is set to MPAN Inquiry.</errorMessage>
</ValidationRule>