force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldMobile</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISBLANK(SPEN_Mobile__c)</errorConditionFormula>
    <errorMessage>The Mobile field is required.</errorMessage>
</ValidationRule>