force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldType.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldType</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISPICKVAL(SPEN_Type__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>SPEN_Type__c</errorDisplayField>
    <errorMessage>The Type field is required if the record type is set to IVR.</errorMessage>
</ValidationRule>