force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldTypeSupplierInquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldTypeSupplierInquiry</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISPICKVAL(SPEN_Event__c, &quot;Supplier Inquiry&quot;) &amp;&amp;
OR(ISBLANK(SPEN_SupplierName__c), ISBLANK(SPEN_SupplierNumber__c))</errorConditionFormula>
    <errorMessage>The Supplier Name or Supplier Number field is required if the record type is set to IVR.</errorMessage>
</ValidationRule>