force-app/main/default/objects/SPEN_Sms__c/validationRules/IvrRequiredFieldVoice.validationRule-meta.xml
<ValidationRule>
    <fullName>IvrRequiredFieldVoice</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;IVR&quot; &amp;&amp;
ISBLANK(SPEN_VoiceCallId__c)</errorConditionFormula>
    <errorMessage>The Voice Call field is required.</errorMessage>
</ValidationRule>