force-app/main/default/objects/SPEN_Sms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_CommunicationSchedulerId__c</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_IvrMessageId__c</columns>
    <columns>SPEN_Mobile__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_Message__c</columns>
    <columns>SPEN_CaseId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SMS</label>
</ListView>