force-app/main/default/objects/SPEN_Sms__c/listViews/All_SMS_Further_Info.listView-meta.xml
<ListView>
    <fullName>All_SMS_Further_Info</fullName>
    <columns>NAME</columns>
    <columns>SPEN_CommunicationSchedulerId__c</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Mobile__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SMS - Further Info</label>
</ListView>